--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NotiAnimes.com</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>¡Bienvenido a NotiAnimes.com!</h1>
@@ -16,7 +16,7 @@
         <a href="https://facebook.com" target="_blank"><img src="images/icono-facebook.png" alt="Facebook"></a>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
 
