--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>¡Bienvenido a NotiAnimes.com!</h1>
     <img src="images/portada.jpg" alt="Imagen de portada" class="cover-image">
     <div class="social-icons">
-        <a href="https://instagram.com" target="_blank"><img src="images/icono-instagram.png" alt="Instagram"></a>
+        <a href="https://instagram.com" target="_blank"><img src="images/icono-instagram.svg" alt="Instagram"></a>
         <a href="https://youtube.com" target="_blank"><img src="images/icono-youtube.png" alt="YouTube"></a>
         <a href="https://tiktok.com" target="_blank"><img src="images/icono-tiktok.png" alt="TikTok"></a>
-        <a href="https://facebook.com" target="_blank"><img src="images/icono-facebook.png" alt="Facebook"></a>
+        <a href="https://facebook.com" target="_blank"><img src="images/icono-facebook.svg" alt="Facebook"></a>
     </div>
 
     <script src="index.js"></script>
